# eddie-bot

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/traits/: get.rs  mod.rs
eddie-bin/: Cargo.toml
eddie-bin/src/: main.rs
eddie-lib/: Cargo.toml
eddie-lib/src/: bot.rs  call.rs  config.rs  functions.rs  lib.rs  origin.rs  storage.rs
eddie-lib/src/storage/: admins.rs  faucets.rs  mod.rs  storage.rs  user_wallets.rs
support/src/traits/: config.rs  dispatch.rs  get.rs  mod.rs  origin.rs
transport/: Cargo.toml
transport/src/: lib.rs
transport/src/discord/: commands.rs  config.rs  discord.rs  helpers.rs  mod.rs
transport/src/telegram/: config.rs  mod.rs  telegram.rs
