[workspace.package]
version = "0.1.0"
authors = ["Arjan van Eersel <arjan@vaneersel.me>"]
description = "IncentiVerse mini node for the Polkadot Hackathon"
edition = "2021"
license = "GPL3"
repository = "https://github.com/arjanvaneersel/eddie-bot"
# TODO: Create page for project
# homepage = "https://arjan.vaneersel.me/eddie"

[workspace]
resolver = "2"
members = ["eddie-bin", "eddie-lib", "support", "transport"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
eddie-lib = { path = "./eddie-lib" }
support = { path = "./support" }
transport = { path = "./transport" }

log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
serenity = "0.12.1"
poise = "0.6.1"
teloxide = { version = "0.12.2", features = ["macros"] }

kv = { version = "0.24.0", features = ["json-value"] }
substrate-api-client = "0.17.0"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6", features = [
    "std",
] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "28f6225beb66a35167af5709606f1d76ca799ef6", features = [
    "std",
] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
