[package]
name = "eddie-bin"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = { workspace = true }
eddie-lib = { workspace = true }
transport = { workspace = true }
support = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
