[package]
name = "eddie-lib"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
kv = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
support = { workspace = true }
