[package]
name = "transport"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eddie-lib = { workspace = true }
log = { workspace = true }
serenity = { workspace = true }
support = { workspace = true }
tokio = { workspace = true }
